--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        paid {
+            applicationId 'com.udacity.gradle.builditbigger.paid'
+            dimension "default"
+        }
+
+        free {
+            applicationId 'com.udacity.gradle.builditbigger.free'
+            dimension "default"
+        }
+    }
 }
 
 dependencies {
